return correct records

--- a/sfdx-source/apex-common/main/classes/fflib_SObjectDomain.cls
+++ b/sfdx-source/apex-common/main/classes/fflib_SObjectDomain.cls
@@ -55,7 +55,7 @@ public virtual inherited sharing class fflib_SObjectDomain
 				}
 			}
 
-			return Records;
+			return result;
 		}
 
 		private set;
